--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Development Blog
+title : Development Blog
+tagline: Blogging about web development adventures
 author :
   name : Steve Kennaird
   email : steve@steveonthefly.co.uk
@@ -80,16 +80,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
-    livefyre :
-      site_id : 123
-    intensedebate :
-      account : 123abc
-    facebook :
-      appid : 123
-      num_posts: 5
-      width: 580
-      colorscheme: light
+      short_name : stevekennairdblog
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
@@ -99,10 +90,6 @@ JB :
     provider : google 
     google : 
         tracking_id : 'UA-35590893-1'
-    getclicky :
-      site_id : 
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
