added some more author config values

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ author :
   email : steve@steveonthefly.co.uk
   github : stevekennaird
   twitter : stevekennaird
+  gravatar: 4e844e0f7bfa6907de629b2073cd83e8
+  googleplus: 114079225143458756706
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
